Bug 365103 - "Icons Tint to Match Highlight" makes icons invisible when "draw a thin line to indicate focus" is activated
Summary: "Icons Tint to Match Highlight" makes icons invisible when "draw a thin line ...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.6.95
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-05 13:36 UTC by Robby Engelmann
Modified: 2016-07-12 21:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2016-07-05 13:36:07 UTC
The new feature "Icons Tint to Match Highlight" introduced with plasma 5.7 makes icons invisible when "draw a thin line to indicate focus" is activated in Breeze Widget style.

Reproducible: Always

Steps to Reproduce:
1.active Breeze styles everywhere
2.go to systemsettings -> Widget Style --> Configure Breeze Widget Style
3.activate "Draw a thin line to indicate focus in menus and menu bars

Actual Results:  
enjoy invisible icons in menus and menu bars

Expected Results:  
icons should not be tinted in that case
Comment 1 Kai Uwe Broulik 2016-07-05 13:53:31 UTC
@Marco: need to check for that setting before painting the icon in its "selected" state
Comment 2 Marco Martin 2016-07-05 13:58:51 UTC
I'll do that :)
Comment 3 Marco Martin 2016-07-05 17:04:15 UTC
Git commit b950883cf7a434ff43bf7766858550a6cf503a2e by Marco Martin.
Committed on 05/07/2016 at 17:04.
Pushed by mart into branch 'master'.

don't invert icons on thin line option

if the option of highlighting
current menu items with a thin line
is enabled, don't invert selected icons

M  +2    -1    kstyle/breezestyle.cpp

http://commits.kde.org/breeze/b950883cf7a434ff43bf7766858550a6cf503a2e
Comment 4 Antonio Rojas 2016-07-12 21:48:26 UTC
Can we have this in 5.7 please?