don't invert icons on thin line option

if the option of highlighting
current menu items with a thin line
is enabled, don't invert selected icons

BUG:365103